--- a/LeetCode/2331-2340/2335. 装满杯子需要的最短总时长（简单）.md
+++ b/LeetCode/2331-2340/2335. 装满杯子需要的最短总时长（简单）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[2335. 装满杯子需要的最短总时长]()** ，难度为 **简单**。
+这是 LeetCode 上的 **[2335. 装满杯子需要的最短总时长](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247495870&idx=1&sn=a15b87852faaa33fc9d976b575ef1099)** ，难度为 **简单**。
 
 Tag : 「排序」、「递归」、「模拟」、「贪心」、「数学」
 
