--- a/LeetCode/1991-2000/1994. 好子集的数目（困难）.md
+++ b/LeetCode/1991-2000/1994. 好子集的数目（困难）.md
@@ -6,7 +6,7 @@ Tag : 「状压 DP」
 
 
 
-给你一个整数数组 nums 。如果 nums 的一个子集中，所有元素的乘积可以表示为一个或多个 互不相同的质数 的乘积，那么我们称它为 好子集 。
+给你一个整数数组 `nums`。如果 `nums` 的一个子集中，所有元素的乘积可以表示为一个或多个 互不相同的质数 的乘积，那么我们称它为 好子集 。
 
 * 比方说，如果 `nums = [1, 2, 3, 4]` ：
 	* `[2, 3]` ，`[1, 2, 3]` 和 `[1, 3]` 是 好 子集，乘积分别为 `6 = 2*3` ，`6 = 2*3` 和 `3 = 3` 。
@@ -51,8 +51,6 @@ Tag : 「状压 DP」
 
 ### 状压 DP
 
-> 今天出了点状况，只能到公司后再写题解了 ...
-
 该问题属于 NP 完全问题，注定不存在多项式解决方案，只能通过「爆搜 + 剪枝」或「状压 DP」来求解。
 
 对子集的乘积进行质数分解，等价于对子集每一位数进行质数分解。
@@ -61,13 +59,13 @@ Tag : 「状压 DP」
 
 同时，题目规定数值相同，下标不同均视为不同方案，因此我们可以先使用数组 $cnts$ 统计在 $nums$ 中每个数的出现次数，$cnts[val] = x$ 含义为数值 $val$ 在 $nums$ 中的出现次数为 $x$ 次。
 
-**使用的数有限（共 $10$ 个），并且使用到的数最多出现一次，容易想到使用「状压 DP」来求解：我们使用一个二进制数来表示好子集乘积最终能拆解成哪些质数，如果拆解结果中包含 $p[i]$，对应的二进制表示中的第 $i$ 位则为 $1$，否则为 $0$。**
+使用的数有限（共 $10$ 个），并且使用到的数最多出现一次，容易想到使用「状压 DP」来求解：我们使用一个二进制数来表示好子集乘积最终能拆解成哪些质数，如果拆解结果中包含 $p[i]$，对应的二进制表示中的第 $i$ 位则为 $1$，否则为 $0$。
 
 **定义 $f[state]$ 为当前子集乘积拆解结果的用到的质数为 $state$ 时的方案数，$state$ 为一个长度 $10$ 的二进制数，若 $state$ 中的第 $k$ 位二进制表示为 $1$，代表数值 $p[k]$ 在拆解结果中出现过；若第 $k$ 位二进制表示为 $0$ 代表 $p[k]$ 在拆解结果中没出现过。**
 
 我们有起始化条件：空集，即 $f[0] = 1$。
 
-不失一般性考虑 $f[s]$ 该如何计算：从前往后考虑每个数值（范围 $[2, 30]$ 的数，$1$ 添加与否不对好子集产生影响，最后讨论）是否可以加入到子集中，一个数值 $t$ 能够添加到子集中的充要条件为题目给定的条件：**该数不会被相同的质数相乘表示。**
+不失一般性考虑 $f[s]$ 该如何计算：从前往后考虑每个数值（范围 $[2, 30]$ 的数，$1$ 添加与否不对好子集产生影响，最后讨论）是否可以加入到子集中，一个数值 $t$ 能够添加到子集中的充要条件为题目给定的条件：**该数不会被相同的质数相乘表示**。
 
 如果一个数值 $t$ 能够添加到好子集中，我们通过「试除法」将其分解为 $p$ 中的多个质数，并使用二进制数 $cur$ 来表示用到了 $p$ 中的哪些质数，然后需要判断 $t$ 能够添加到那些子集中，其实就是枚举与 $cur$ 无交集的状态 $prev$，最终的 $f[s]$ 为「所有合法的 $prev$ 的状态数 $f[prev]$」与「数值 $t$ 的出现次数 $cnts[t]$ 」的乘积之和。
 
@@ -75,7 +73,7 @@ Tag : 「状压 DP」
 
 由「质数 $p$ 组成的好子集方案数」为 $ans = \sum_{state' = 1}^{{1024}} f[state']$，其中 $state'$ 对应一个合法的好子集方案。
 
-在此基础上，再考虑数值 $1$ 对答案的影响：**在每个合法的 $state'$ 前提下，增加若干个 $1$ 并不影响子集乘积（即好子集增加 $1$ 后仍为好子集），因此每个合法子集 $state'$ 可以对应出 $2^{cnts[1]}$ 个具体方案（代表每个 $1$ 即可以选，也可以不选）。**
+在此基础上，再考虑数值 $1$ 对答案的影响：**在每个合法的 $state'$ 前提下，增加若干个 $1$ 并不影响子集乘积（即好子集增加 $1$ 后仍为好子集），因此每个合法子集 $state'$ 可以对应出 $2^{cnts[1]}$ 个具体方案（代表每个 $1$ 即可以选，也可以不选）**。
 
 代码：
 ```Java
@@ -121,7 +119,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：预处理每个数值的出现次数复杂度为 $O(n)$；令数值范围 $C = 30$，状态数为 $M = 1024$，DP 部分复杂度为 $O(C * M)$。整体复杂度为 $O(n + C * M)$
+* 时间复杂度：预处理每个数值的出现次数复杂度为 $O(n)$；令数值范围 $C = 30$，状态数为 $M = 1024$，DP 部分复杂度为 $O(C \times M)$。整体复杂度为 $O(n + C \times M)$
 * 空间复杂度：$O(C + M)$
 
 ---
@@ -178,8 +176,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：预处理每个数值的出现次数复杂度为 $O(n)$；令数值范围 $C = 30$，状态数为 $M = 1024$，DP 部分复杂度为 $O(C * M)$。整体复杂度为 $O(n + C * M)$
-* 空间复杂度：$O(C * M)$
+* 时间复杂度：预处理每个数值的出现次数复杂度为 $O(n)$；令数值范围 $C = 30$，状态数为 $M = 1024$，DP 部分复杂度为 $O(C \times M)$。整体复杂度为 $O(n + C \times M)$
+* 空间复杂度：$O(C \times M)$
 
 ---
 
