--- a/LeetCode/281-290/284. 顶端迭代器（中等）.md
+++ b/LeetCode/281-290/284. 顶端迭代器（中等）.md
@@ -4,6 +4,8 @@
 
 Tag : 「数据结构」、「模拟」
 
+
+
 请你设计一个迭代器，除了支持 `hasNext` 和 `next` 操作外，还支持 `peek` 操作。
 
 实现 `PeekingIterator` 类：
@@ -31,10 +33,10 @@ peekingIterator.hasNext(); // 返回 False
 ```
 
 提示：
-* 1 <= nums.length <= 1000
-* 1 <= nums[i] <= 1000
-* 对 next 和 peek 的调用均有效
-* next、hasNext 和 peek 最多调用  1000 次
+* $1 <= nums.length <= 1000$
+* $1 <= nums[i] <= 1000$
+* 对 `next` 和 `peek` 的调用均有效
+* `next`、`hasNext` 和 `peek` 最多调用  $1000$ 次
 
 **进阶：你将如何拓展你的设计？使之变得通用化，从而适应所有的类型，而不只是整数型？**
 
