--- a/LeetCode/61-70/65. 有效数字（困难）.md
+++ b/LeetCode/61-70/65. 有效数字（困难）.md
@@ -9,19 +9,19 @@ Tag : 「模拟」
 有效数字（按顺序）可以分成以下几个部分：
 
 1. 一个 小数 或者 整数
-2. （可选）一个 'e' 或 'E' ，后面跟着一个 整数
+2. （可选）一个 `'e'` 或 `'E'` ，后面跟着一个 整数
 
 小数（按顺序）可以分成以下几个部分：
 
-1. （可选）一个符号字符（'+' 或 '-'）
+1. （可选）一个符号字符（`'+'` 或 `'-'`）
 2. 下述格式之一：
-	1. 至少一位数字，后面跟着一个点 '.'
-	2. 至少一位数字，后面跟着一个点 '.' ，后面再跟着至少一位数字
-	3. 一个点 '.' ，后面跟着至少一位数字
+	1. 至少一位数字，后面跟着一个点 `'.'`
+	2. 至少一位数字，后面跟着一个点 `'.'` ，后面再跟着至少一位数字
+	3. 一个点 `'.'` ，后面跟着至少一位数字
 
 整数（按顺序）可以分成以下几个部分：
 
-1. （可选）一个符号字符（'+' 或 '-'）
+1. （可选）一个符号字符（`'+'` 或 `'-'`）
 2. 至少一位数字
 
 部分有效数字列举如下：
@@ -32,33 +32,37 @@ Tag : 「模拟」
 
 * `["abc", "1a", "1e", "e3", "99e2.5", "--6", "-+3", "95a54e53"]`
 
-给你一个字符串 s ，如果 s 是一个 有效数字 ，请返回 true 。
+给你一个字符串 `s`，如果 `s` 是一个 有效数字 ，请返回 `true`。
 
 
 示例 1：
 ```
 输入：s = "0"
+
 输出：true
 ```
 示例 2：
 ```
 输入：s = "e"
+
 输出：false
 ```
 示例 3：
 ```
 输入：s = "."
+
 输出：false
 ```
 示例 4：
 ```
 输入：s = ".1"
+
 输出：true
 ```
 
 提示：
-* 1 <= s.length <= 20
-* s 仅含英文字母（大写和小写），数字（0-9），加号 '+' ，减号 '-' ，或者点 '.' 。
+* $1 <= s.length <= 20$
+* `s` 仅含英文字母（大写和小写），数字（`0-9`），加号 `'+'` ，减号 `'-'` ，或者点 `'.'` 。
 
 ---
 
