--- a/LeetCode/1471-1480/1473. 粉刷房子 III（困难）.md
+++ b/LeetCode/1471-1480/1473. 粉刷房子 III（困难）.md
@@ -6,22 +6,22 @@ Tag : 「动态规划」、「序列 DP」
 
 
 
-在一个小城市里，有 m 个房子排成一排，你需要给每个房子涂上 n 种颜色之一（颜色编号为 1 到 n ）。
+在一个小城市里，有 `m` 个房子排成一排，你需要给每个房子涂上 `n` 种颜色之一（颜色编号为 `1` 到 `n` ）。
 
 有的房子去年夏天已经涂过颜色了，所以这些房子不可以被重新涂色。
 
 我们将连续相同颜色尽可能多的房子称为一个街区。
 
-（比方说 houses = [1,2,2,3,3,2,1,1] ，它包含 5 个街区  [{1}, {2,2}, {3,3}, {2}, {1,1}] 。）
+（比方说 `houses = [1,2,2,3,3,2,1,1]`，它包含 5 个街区  `[{1}, {2,2}, {3,3}, {2}, {1,1}]` 。）
 
-给你一个数组 houses ，一个 m * n 的矩阵 cost 和一个整数 target ，其中：
+给你一个数组 `houses`，一个 `m * n` 的矩阵 `cost` 和一个整数 `target`，其中：
 
-* `houses[i]`：是第 i 个房子的颜色，0 表示这个房子还没有被涂色。
-* `cost[i][j]`：是将第 i 个房子涂成颜色 j+1 的花费。
+* `houses[i]`：是第 `i` 个房子的颜色，`0` 表示这个房子还没有被涂色。
+* `cost[i][j]`：是将第 `i` 个房子涂成颜色 `j + 1` 的花费。
 
-请你返回房子涂色方案的最小总花费，使得每个房子都被涂色后，恰好组成 target 个街区。
+请你返回房子涂色方案的最小总花费，使得每个房子都被涂色后，恰好组成 `target` 个街区。
 
-如果没有可用的涂色方案，请返回 -1 。
+如果没有可用的涂色方案，请返回 `-1` 。
 
 
 
@@ -61,13 +61,13 @@ Tag : 「动态规划」、「序列 DP」
 ```
 
 提示：
-* m == houses.length == cost.length
-* n == cost[i].length
-* 1 <= m <= 100
-* 1 <= n <= 20
-* 1 <= target <= m
-* 0 <= houses[i] <= n
-* 1 <= cost[i][j] <= $10^4$
+* $m = houses.length = cost.length$
+* $n = cost[i].length$
+* $1 <= m <= 100$
+* $1 <= n <= 20$
+* $1 <= target <= m$
+* $0 <= houses[i] <= n$
+* $1 <= cost[i][j] <= 10^4$
 
 ---
 
@@ -99,7 +99,7 @@ Tag : 「动态规划」、「序列 DP」
 * 下标转换：这是个人习惯，无论做什么题，我都喜欢将下标转换为从 $1$ 开始，目的是为了「节省负值下标的分情况讨论」、「将无效状态限制在 $0$ 下标内」或者「充当哨兵」等等。
 * 将 `0x3f3f3f3f` 作为 `INF`：因为目标是求最小值，我们应当使用一个较大值充当正无穷，来关联无效状态。同时为了确保不会出现「在正无穷基础上累加导致丢失正无穷含义」的歧义情况，我们可以使用一个有「累加空间」的值作为「正无穷」（这个问题刚好最近在 [这里](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247486435&idx=1&sn=2464b01e9c0fb8d81fcea6dd4ed0ec92&chksm=fd9ca0fccaeb29ea9947456290099143c5bc9bdea0ccfb2408f5fd63f5e0fc13fcd8060d4251&token=515378286&lang=zh_CN#rd) 专门讲过）。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     int INF = 0x3f3f3f3f;
