--- a/Index/红黑树.md
+++ b/Index/红黑树.md
@@ -1,5 +1,6 @@
 | 题目                                                         | 题解                                                         | 难度 | 推荐指数 |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---- | -------- |
+| [649. Dota2 参议院](https://leetcode.cn/problems/dota2-senate/) | [LeetCode 题解链接](https://leetcode.cn/problems/dota2-senate/solutions/2402101/gong-shui-san-xie-jie-he-shu-ju-jie-gou-x581k/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [729. 我的日程安排表 I](https://leetcode-cn.com/problems/my-calendar-i/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/my-calendar-i/solution/by-ac_oier-1znx/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [870. 优势洗牌](https://leetcode.cn/problems/advantage-shuffle/) | [LeetCode 题解链接](https://leetcode.cn/problems/advantage-shuffle/solution/by-ac_oier-i01s/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [1606. 找到处理最多请求的服务器](https://leetcode-cn.com/problems/find-servers-that-handled-most-number-of-requests/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/find-servers-that-handled-most-number-of-requests/solution/by-ac_oier-zgm6/) | 困难 | 🤩🤩🤩🤩     |
