--- a/Index/脑筋急转弯.md
+++ b/Index/脑筋急转弯.md
@@ -8,6 +8,7 @@
 | [667. 优美的排列 II](https://leetcode.cn/problems/beautiful-arrangement-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/beautiful-arrangement-ii/solution/by-ac_oier-lyns/) | 中等 | 🤩🤩🤩🤩     |
 | [672. 灯泡开关 Ⅱ](https://leetcode.cn/problems/bulb-switcher-ii/) | [LeetCode 题解链接](https://leetcode.cn/problems/bulb-switcher-ii/solution/by-ac_oier-3ttx/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [908. 最小差值 I](https://leetcode.cn/problems/smallest-range-i/) | [LeetCode 题解链接](https://leetcode.cn/problems/smallest-range-i/solution/by-ac_oier-7fh0/) | 简单 | 🤩🤩🤩🤩     |
+| [1503. 所有蚂蚁掉下来前的最后一刻](https://leetcode.cn/problems/last-moment-before-all-ants-fall-out-of-a-plank/) | [LeetCode 题解链接](https://leetcode.cn/problems/last-moment-before-all-ants-fall-out-of-a-plank/solution/gong-shui-san-xie-chang-gui-mo-ni-ti-by-u77hy/) | 中等 | 🤩🤩🤩🤩     |
 | [2038. 如果相邻两个颜色均相同则删除当前颜色](https://leetcode-cn.com/problems/remove-colored-pieces-if-both-neighbors-are-the-same-color/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/remove-colored-pieces-if-both-neighbors-are-the-same-color/solution/gong-shui-san-xie-nao-jin-ji-zhuan-wan-y-a8xm/) | 中等 | 🤩🤩🤩🤩🤩    |
 | [2069. 模拟行走机器人 II](https://leetcode-cn.com/problems/walking-robot-simulation-ii/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/walking-robot-simulation-ii/solution/by-ac_oier-6zib/) | 中等 | 🤩🤩🤩🤩     |
 
